# ayelet_initmanager

./: Dockerfile  pyproject.toml  setup.cfg
.github/workflows/: test.yml
app/: main.py  model.py
app/initmanager/: init_message_consumer.py
app/utils/: blob.py  rabbitmq.py
scripts/: .coverage  blackbx_test.sh  coverage.sh  lint.sh  test.yml  unittest.sh
tests/blackbox/: conftest.py
tests/blackbox/app/: conftest.py  test_blackbox.py
tests/blackbox/image/: conftest.py  test_image.py
tests/unittest/: test_blob.py  test_init_messages_processor.py  test_redis.py
utils/: blob.py  rabbitmq.py  redis.py
