[tool.poetry]
name = "ayelet_initmanager"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]

[tool.poetry.dependencies]
python = "^3.8"
aio-pika = "^8.0.3"
pika = "^1.2.0"
fastapi = "^0.79.0"
rabbitmq = "^0.2.0"
orjson = "^3.6.8"
ormsgpack = "^1.2.2"
envolved = "^0.5.0"
redis = "^4.3.4"
pytest = "^7.1.2"

[tool.poetry.dev-dependencies]
azure-storage-blob = "~12.13.0"
retrying = "^1.3.3"
async_asgi_testclient = "^1.4.11"
pytest = "^7.1.2"
pytest-asyncio = "0.19.0"
isort="^5.10.1"
flake8 = {version = "*", allow-prereleases = true}
mypy = "^0.961"
coverage = "^6.3.2"
yellowbox = {version="^0.7.3", extras=["azure_storage", "redis", "rabbit_mq"]}
aiohttp = "^3.8.1"
types-redis = "^4.3.4"


[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
